[gd_scene load_steps=2 format=3 uid="uid://health_bar_scene"]

[ext_resource type="Script" path="res://scripts/ui/health_bar.gd" id="1"]

[node name="HealthBar" type="Control"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 24.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="ArmorFill" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 0.0
offset_bottom = 24.0
color = Color(0.3, 0.5, 0.9, 1)

[node name="HealthFill" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 24.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1
